<resources>
    <string name="app_name">De Urgență</string>
    <string name="loading_label">Loading…</string>
    <string name="permission_permanently_denied_title">Permission needed</string>
    <string name="permission_permanently_denied_msg">To use this function, you have to change the app permissions. Please open the Settings menu and grant access to the requested permissions.</string>
    <string name="permission_permanently_denied_settings_button">Settings</string>
    <string name="permission_denied_title">Permission needed</string>
    <string name="permission_denied_msg">To use this function we need your permission to access the storage.</string>
    <string name="permission_denied_ok_button">OK</string>
    <string name="permission_denied_cancel_button">Cancel</string>
    <string name="permission_rationale">Location permission is needed for core functionality.</string>
    <string name="error_generic">Something went wrong!</string>
    <string name="error_field_required">This field is required!</string>
    <string name="error_email_invalid">Email not valid!</string>
    <string name="error_password_invalid">Password not valid!</string>
    <string name="error_password_not_matched">Password not matched!</string>
    <string name="login_fragment_name">Login Fragment</string>
    <string name="login_form_title">Login</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="home_title">De Urgență</string>
    <string name="home_header_title">Welcome back.</string>
    <string name="home_header_description">This is a small text to welcome the user back in the app and excite him to do something to be more prepared.</string>
    <string name="home_menu_item_address">Addresses and routes</string>
    <string name="home_menu_item_group">Emergency groups</string>
    <string name="home_menu_item_backpack">Emergency backpacks</string>
    <string name="home_menu_item_courses">Courses and useful info</string>
    <string name="login_button_signup" translatable="false">Sign up</string>
    <string name="login_button_login" translatable="false">Authenticate</string>
    <string name="login_title" translatable="false">Did you make your plan in case of an emergency?</string>
    <string name="login_subtitle" translatable="false">Let\'s do it together!</string>
    <string name="login_auth_title">Sign into your account</string>
    <string name="login_label_email">Email</string>
    <string name="login_label_password">Password</string>
    <string name="login_button_apple">Sign in with Apple</string>
    <string name="login_button_google">Sign in with Google</string>
    <string name="login_button_facebook">Sign in with Facebook</string>
    <string name="login_divider_text">or</string>
    <string name="login_label_forgot_password">Forgot your password?</string>
    <string name="login_button_account">Sign in</string>
    <string name="reset_password_title">Reset password</string>
    <string name="reset_password_email">Email for the account</string>
    <string name="reset_password_email_hint">Enter email</string>
    <string name="reset_password_new_password">New password</string>
    <string name="reset_password_confirm_password">Confirm new password</string>
    <string name="reset_password_btn">Reset password</string>
    <string name="reset_password_dialog_btn_success">Go to login</string>
    <string name="reset_password_dialog_btn_failure">Retry</string>
    <string name="reset_password_invalid_email">Enter a valid email!</string>
    <string name="reset_password_different_passwords">Passwords do not match!</string>
    <string name="reset_password_password_too_short">The password must be at least 8 characters!</string>
    <string name="reset_password_success">The request to reset the password was successful. An email was sent to
        the provided email address with a link to finish the password reset. After clicking that link you can log in
        the app with the new credentials.
    </string>
    <string name="reset_password_failure">The request to reset the password failed! Please try again.</string>
    <string name="reset_password_loading">Processing the reset password request…</string>
    <string name="register_title" translatable="false">Create your account</string>
    <string name="register_label_first_name" translatable="false">First name</string>
    <string name="register_label_last_name" translatable="false">Last name</string>
    <string name="register_label_email" translatable="false">Email</string>
    <string name="register_label_password" translatable="false">Password</string>
    <string name="register_terms_text" translatable="false">Accept {link}</string>
    <string name="register_terms_link_text" translatable="false">terms and conditions</string>
    <string name="register_submit_button" translatable="false">Submit</string>
    <string name="register_completed_title" translatable="false">Validate your account</string>
    <string name="register_completed_message" translatable="false">An e-mail with a confirmation link was sent to the address you registered for your account. Please click on the link to validate the account, then proceed to login.</string>
    <string name="register_back_to_login">Back to login screen</string>
    <string name="register_cd_mail_icon">Mail icon</string>
    <string name="nav_menu_footer_donate_button_title">Donate</string>
    <string name="nav_menu_footer_description">Application designed, developed and managed by</string>
    <string name="nav_menu_item_home">Home</string>
    <string name="nav_menu_item_address">Addresses and routes</string>
    <string name="nav_menu_item_groups">Emergency groups</string>
    <string name="nav_menu_item_backpack">Emergency backpacks</string>
    <string name="nav_menu_item_courses">Courses and useful info</string>
    <string name="nav_menu_item_profile">My profile</string>
    <string name="nav_menu_item_about">About</string>
    <string name="nav_menu_item_settings">Settings</string>
    <string name="nav_menu_item_logout">Logout</string>
    <string name="cd_logo_animated">Animated application logo</string>
    <string name="backpacks_listing_title">Your emergency backpack</string>
    <string name="backpack_new_name_dialog_title">Name of new backpack</string>
    <string name="backpack_new_cancel">Cancel</string>
    <string name="backpack_new_ok">OK</string>
    <string name="backpack_label_main_info">The emergency backpack contains objects, food and other useful items which
        will help you survive for at least 72 hours in a critical situation. Following the next steps you will find
        out what does this backpack must contain, the minimum required items and choose the people responsible for
        keeping it relevant.
    </string>
    <string name="backpack_add_new">Add new backpack</string>
    <string name="backpack_btn_reminder">Remind me later</string>
    <string name="backpack_label_details_info">There are certain items which are recommended to have in this backpack.
        Even if you do not have the backpack yet, store the items until you acquire one. It is recommended that
        the backpack is waterproof or made from a resistant material.
        The backpack is the responsibility of all the people living in the house. If you live with someone else,
        invite the person to use this app and together make sure you always have the required items in the backpack.
    </string>
    <string name="backpack_categories_label">Backpack components</string>
    <string name="backpack_designated_person">Choose person responsible</string>
    <string name="item_expiration_label">Expire at: %1$s</string>
    <string name="no_expiration_date">No expiration date</string>
    <string name="item_quantity_label">%1$s x</string>
    <string name="item_btn_delete">Delete</string>
    <string name="edit_backpack_item_name_label">Product name</string>
    <string name="edit_backpack_item_quantity_label">Quantity</string>
    <string name="edit_backpack_item_date_label">Expires at</string>
    <string name="btn_item_change_new">Add item</string>
    <string name="btn_item_change_update">Update item</string>
    <string name="btn_item_cancel">Cancel</string>
    <string name="backpack_category_empty">You do not have any items of this type. Please use the button below and add
        some.</string>
    <string name="backpack_edit_item_date_label">Click to select expiration date</string>
    <string name="backpack_btn_add_items">Add more items</string>
    <string name="edit_backpack_item_error_date">Please enter a future expiration date!</string>
    <string name="edit_backpack_item_error_name">Please name the product!</string>
    <string name="edit_backpack_item_error_quantity">Please provide a quantity</string>
    <string name="edit_backpack_item_error_quantity_value">"Please enter a valid number quantity!"</string>
    <string name="edit_backpack_error_new_item">There was an error while saving the item. Please try again!</string>
    <string name="edit_backpack_error_update_item">There was an error while updating the item! Please try again!</string>
    <string name="group_create_title">Create a group</string>
    <string name="group_create_info_1">În eventualitatea unui cutremur este important sa ai un protocol împreună cu cei apropiați prin care vă puteți regăsi cu ușurință. Creează un grup de prieteni, de familie sau de colegi de la birou sau școală pentru a vă seta puncte de întâlnire în caz de cutremur.</string>
    <string name="group_create_info_2">Chiar dacă nu vei avea acces la internet în acele momente, poți folosi în continuare aplicația pentru a vedea care sunt punctele de întâlnire și pentru a identifica traseele pentru a ajunge acolo. De asemenea, poți vedea, cu permisiunea lor, traseele și adresele uzuale ale membrilor grupului tău și îi poți căuta dacă aceștia nu vin la punctul de întâlnire.</string>
    <string name="group_create_reject">I don\'t want to create a group now</string>
    <string name="group_create_button_label">Create a new group</string>
    <string name="group_continue_button_label">Continue</string>
    <string name="group_create_info_title">Create your group of friends</string>
    <string name="group_name_label">Group name</string>
    <string name="group_name_hint">Be creative…</string>
    <string name="group_title_listing">My groups</string>
    <string name="group_btn_create_new">Add new group</string>
    <string name="group_btn_add_new_member">Add new member to group</string>
    <string name="group_exit">(Exit group)</string>
    <string name="group_error_listing">Error when retrieving groups: %1$s</string>
    <string name="group_cd_people_icon">Icon for a group of people</string>
    <string name="configure_addresses">Configure Addresses</string>
    <string name="configure_group">Create your group</string>
    <string name="configure_backpack">Make your emergency backpack</string>
    <string name="configure_courses">Learn how to give first aid</string>
    <string name="about_app_description">This is the description of this very important app. This will most likely be
        longer than this current text!</string>
    <string name="about_created_by">Application designed, developed and managed by</string>
    <string name="about_donate">Donate</string>
    <string name="about_cd_organization">Code for România organization icon</string>
    <string name="about_cd_facebook">Facebook icon</string>
    <string name="about_cd_instagram">Instagram icon</string>
    <string name="about_cd_url">Link to organization icon</string>
    <string name="about_cd_github">Github icon</string>
    <string name="change_password">Change password</string>
    <string name="terms_conditions">Terms and conditions</string>
    <string name="report_problem">Report a problem</string>
    <string name="delete_account">Delete your account</string>
</resources>