<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_item_address"
            android:title="@string/nav_menu_item_address" />
        <item
            android:id="@+id/nav_item_groups"
            android:title="@string/nav_menu_item_groups" />
        <item
            android:id="@+id/nav_item_backpack"
            android:title="@string/nav_menu_item_backpack" />
        <item
            android:id="@+id/nav_item_courses"
            android:title="@string/nav_menu_item_courses" />
        <item
            android:id="@+id/nav_item_profile"
            android:title="@string/nav_menu_item_profile" />
        <item
            android:id="@+id/nav_item_settings"
            android:title="@string/nav_menu_item_settings" />
        <item
            android:id="@+id/nav_item_about"
            android:title="@string/nav_menu_item_about" />
        <item
            android:id="@+id/nav_item_logout"
            android:title="@string/nav_menu_item_logout" />
    </group>
</menu>
