<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="@dimen/margin"
    android:paddingTop="@dimen/big_margin"
    android:paddingEnd="@dimen/margin">

    <TextView
        android:id="@+id/change_password"
        style="@style/MenuTextView"
        android:textAppearance="@style/Text.MenuList"
        android:background="?android:attr/selectableItemBackground"
        android:text="@string/change_password"/>

    <TextView
        android:id="@+id/terms_conditions"
        style="@style/MenuTextView"
        android:textAppearance="@style/Text.MenuList"
        android:background="?android:attr/selectableItemBackground"
        android:text="@string/terms_conditions"/>

    <TextView
        android:id="@+id/report_problem"
        style="@style/MenuTextView"
        android:textAppearance="@style/Text.MenuList"
        android:background="?android:attr/selectableItemBackground"
        android:text="@string/report_problem"/>

    <TextView
        android:id="@+id/delete_account"
        style="@style/MenuTextView"
        android:textAppearance="@style/Text.MenuList"
        android:background="?android:attr/selectableItemBackground"
        android:text="@string/delete_account"/>

</LinearLayout>
