<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            style="@style/Text.SectionHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20sp"
            android:text="@string/group_create_title"
            android:textColor="@color/design_default_color_on_secondary"
            android:textSize="24sp" />

        <TextView
            style="@style/Text.Paragraph"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24sp"
            android:text="@string/group_create_info_1" />

        <TextView
            style="@style/Text.Paragraph"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/group_create_info_2"
            android:textSize="16sp"
            app:lineHeight="24sp" />

        <TextView
            android:id="@+id/button_reject_new_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20sp"
            android:text="@string/group_create_reject"
            android:textAlignment="center"
            android:textSize="16sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_create_new_group"
            style="@style/Signup.Button.Simple"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/group_create_button_label" />

    </LinearLayout>

</ScrollView>
