<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/home_menu_address"
        style="@style/MenuTextView"
        android:background="?android:attr/selectableItemBackground"
        android:textAppearance="@style/Text.MenuList"
        android:drawableStart="@drawable/ic_map"
        android:text="@string/home_menu_item_address"/>

    <TextView
        android:id="@+id/home_menu_group"
        android:background="?android:attr/selectableItemBackground"
        style="@style/MenuTextView"
        android:textAppearance="@style/Text.MenuList"
        android:drawableStart="@drawable/ic_group"
        android:text="@string/home_menu_item_group"/>

    <TextView
        android:id="@+id/home_menu_bagpack"
        style="@style/MenuTextView"
        android:background="?android:attr/selectableItemBackground"
        android:textAppearance="@style/Text.MenuList"
        android:drawableStart="@drawable/ic_shopping_bag"
        android:text="@string/home_menu_item_backpack"/>

    <TextView
        android:id="@+id/home_menu_courses"
        style="@style/MenuTextView"
        android:background="?android:attr/selectableItemBackground"
        android:textAppearance="@style/Text.MenuList"
        android:drawableStart="@drawable/ic_plus"
        android:text="@string/home_menu_item_courses"/>

</LinearLayout>