<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:text="@string/group_create_info_title"
            android:textColor="@color/design_default_color_on_secondary"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            style="@style/Input.Label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/group_name_label" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/big_margin"
            android:layout_weight="1"
            app:hintTextColor="@color/design_default_color_on_secondary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_group_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/group_name_hint"
                android:inputType="none"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:textColor="@color/design_default_color_on_secondary"
                android:textColorHint="@color/design_default_color_on_secondary"
                app:backgroundTint="@color/cardview_dark_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_create_new_group_continue"
            style="@style/Signup.Button.Simple"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/big_margin"
            android:text="@string/group_continue_button_label"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </LinearLayout>
</ScrollView>
