<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/configure_address"
        style="@style/Widget.DeUrgenta.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start|center_vertical"
        android:text="@string/configure_addresses"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:icon="@drawable/ic_map"
        app:iconTint="@color/white"
        app:iconTintMode="multiply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/configure_group"
        style="@style/Widget.DeUrgenta.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start|center_vertical"
        android:text="@string/configure_group"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:icon="@drawable/ic_group"
        app:iconTint="@color/white"
        app:iconTintMode="multiply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/configure_address" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/configure_backpack"
        style="@style/Widget.DeUrgenta.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start|center_vertical"
        android:text="@string/configure_backpack"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:icon="@drawable/ic_shopping_bag"
        app:iconTint="@color/white"
        app:iconTintMode="multiply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/configure_group" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/configure_courses"
        style="@style/Widget.DeUrgenta.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start|center_vertical"
        android:text="@string/configure_courses"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:icon="@drawable/ic_plus"
        app:iconTint="@color/white"
        app:iconTintMode="multiply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/configure_backpack" />
</androidx.constraintlayout.widget.ConstraintLayout>
