<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryLight"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:padding="@dimen/margin"
        tools:context="ro.code4.deurgenta.ui.register.RegisterActivity">


    <TextView
            android:id="@+id/title"
            style="@style/Text.Heading.Dark"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/register_title"
            app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
            android:id="@+id/firstNameLayout"
            style="@style/Input.Layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title">

        <TextView
                style="@style/Input.Label"
                android:text="@string/register_label_first_name"
                android:labelFor="@id/firstNameEditText" />

        <EditText
                android:id="@+id/firstNameEditText"
                style="@style/Input.Field"
                android:inputType="textPersonName"
                android:ems="10" />
    </LinearLayout>

    <LinearLayout
            android:id="@+id/lastNameLayout"
            style="@style/Input.Layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/firstNameLayout">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Input.Label"
                android:text="@string/register_label_last_name"
                android:labelFor="@id/lastNameEditText" />

        <EditText
                android:id="@+id/lastNameEditText"
                style="@style/Input.Field"
                android:inputType="textPersonName"
                android:ems="10" />

    </LinearLayout>

    <LinearLayout
            android:id="@+id/emailLayout"
            style="@style/Input.Layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lastNameLayout">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Input.Label"
                android:text="@string/register_label_email"
                android:labelFor="@id/emailEditText" />

        <EditText
                android:id="@+id/emailEditText"
                style="@style/Input.Field"
                android:inputType="textEmailAddress"
                android:ems="10" />

    </LinearLayout>

    <LinearLayout
            android:id="@+id/passwordLayout"
            style="@style/Input.Layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailLayout">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Input.Label"
                android:text="@string/register_label_password"
                android:labelFor="@id/passwordEditText" />

        <EditText
                android:id="@+id/passwordEditText"
                style="@style/Input.Field"
                android:inputType="textPassword"
                android:ems="10" />

    </LinearLayout>

    <LinearLayout
            android:id="@+id/termsLayout"
            style="@style/Input.Layout"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordLayout">

        <CheckBox
                android:id="@+id/termsCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent" />

        <TextView
                android:id="@+id/termsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_terms" />

    </LinearLayout>


    <Button
            android:id="@+id/submitButton"
            android:text="@string/register_submit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:padding="@dimen/margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/termsLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>
